# TPR4Py

./: .gitignore  4D_data_processing.ipynb  Estimate_calibration_from_3D_data.ipynb  Main analysis workflow.ipynb  Readme.md  bioformats_loader.ipynb  environment.yml  matnpy_compare.py  pyproject.toml  qp_main.py  requirements.txt  requirements_detailed.txt  tpr.py
legacy/: 4D_data_processing.ipynb  Estimate_calibration_from_4D_data.ipynb
settings/: default.yaml
tests/: test_io.py  test_processing.py  test_qp.py
tpr4py/: __init__.py
tpr4py/cli/: main.py
tpr4py/core/: phase_structure.py  run_phase_retrieval.py
tpr4py/core/algorithms/: getQP.py  precompute_mask.py
tpr4py/core/utils/: clamp.py  cropXY.py  getMirroredStack.py  gui.py  io.py  linmap.py  map3D.py  processing_loader.py
tpr4py/napari_plugin/: __init__.py  napari.yaml  viewer.py
tpr4py/tpr4py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
utils/: clamp.py  cropCoregMask.py  cropXY.py  getMirroredStack.py  getQP.py  io.py  linmap.py  loadData.py  map3D.py  phase_structure.py  plotStack.py  testplot.py  writeQP.py
